--- a/dns_filter.conf
+++ b/dns_filter.conf
@@ -1,22 +1,26 @@
-# DNS Прокси конфигурационный файл
-# Поддержка множественных типов и исключений
-
+# Enable debugging
 debug
 
-# Синтаксис фильтров:
-# * - все записи (по умолчанию)
-# ipv4 - только A записи
-# ipv6 - только AAAA записи
-# mx - только MX записи
-# ns - только NS записи
-# Можно комбинировать: ipv4 ipv6 - только A и AAAA
-# Исключения: !ipv6 - всё кроме AAAA, !ipv6 !mx - всё кроме AAAA и MX
-# НЕЛЬЗЯ смешивать: ipv4 !ipv6 - ошибка!
+# Block IPv6 for auto.ru
+rule: *auto.ru -> ipv4 -> 8.8.8.8
 
-# Примеры:
+# Only IPv4 and IPv6 (no MX, NS, etc.)
+rule: *example.com -> ipv4 ipv6 -> 8.8.8.8
 
-# Только IPv4 для auto.ru
-rule: *.ru -> !ipv6 -> 10.0.0.1
+# Everything except IPv6 for VK
+rule: *vk.* -> !ipv6 -> 77.88.8.8
 
-# По умолчанию
-default: 10.0.0.1
+# Everything except IPv6 and MX for Yandex
+rule: *yandex.ru -> !ipv6 !mx -> 77.88.8.8
+
+# Only MX records for mail domains
+rule: mail.* -> mx -> 8.8.8.8
+
+# All records for .ru domains with multiple servers
+rule: *.ru -> * -> 8.8.8.8 1.1.1.1
+
+# IPv6 upstream servers
+rule: *.google.com -> * -> 2001:4860:4860::8888
+
+# Default fallback
+default: 8.8.8.8 8.8.4.4
