Add -static flag to CFLAGS
Add signal handler

Add Dockerfile

Comment out examples in config

--- a/dns_filter.conf
+++ b/dns_filter.conf
@@ -1,26 +1,26 @@
 # Enable debugging
-debug
+# debug
 
 # Block IPv6 for auto.ru
-rule: *auto.ru -> ipv4 -> 8.8.8.8
+# rule: *auto.ru -> ipv4 -> 8.8.8.8
 
 # Only IPv4 and IPv6 (no MX, NS, etc.)
-rule: *example.com -> ipv4 ipv6 -> 8.8.8.8
+# rule: *example.com -> ipv4 ipv6 -> 8.8.8.8
 
 # Everything except IPv6 for VK
-rule: *vk.* -> !ipv6 -> 77.88.8.8
+# rule: *vk.* -> !ipv6 -> 77.88.8.8
 
 # Everything except IPv6 and MX for Yandex
-rule: *yandex.ru -> !ipv6 !mx -> 77.88.8.8
+# rule: *yandex.ru -> !ipv6 !mx -> 77.88.8.8
 
 # Only MX records for mail domains
-rule: mail.* -> mx -> 8.8.8.8
+# rule: mail.* -> mx -> 8.8.8.8
 
 # All records for .ru domains with multiple servers
-rule: *.ru -> * -> 8.8.8.8 1.1.1.1
+# rule: *.ru -> * -> 8.8.8.8 1.1.1.1
 
 # IPv6 upstream servers
-rule: *.google.com -> * -> 2001:4860:4860::8888
+# rule: *.google.com -> * -> 2001:4860:4860::8888
 
 # Default fallback
 default: 8.8.8.8 8.8.4.4
